--- a/main_shit.ipynb
+++ b/main_shit.ipynb
@@ -7,8 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Maze import Maze\n",
-    "from Renderer import Renderer"
+    "from Maze import Maze"
    ]
   },
   {
@@ -31,6 +30,8 @@
     "\n",
     "def get_hero_movement(maze, view):\n",
     "    key = \"\"\n",
+    "    size_x = maze.tile_num_x\n",
+    "    size_y = maze.tile_num_y\n",
     "    \n",
     "    x = maze.get_hero_x()\n",
     "    y = maze.get_hero_y()\n",
@@ -40,16 +41,16 @@
     "\n",
     "        # checks keyboard input and updates x and y\n",
     "        if key == \"ArrowRight\" and x < size_x and not check_wall_collision(maze.get_maze()[y][x]):\n",
-    "            return (1, 0)\n",
+    "            return 1, 0\n",
     "\n",
     "        elif key == \"ArrowLeft\" and x > 0 and not check_wall_collision(maze.get_maze()[y][x]):\n",
-    "            return (-1, 0)\n",
+    "            return -1, 0\n",
     "\n",
     "        elif key == \"ArrowDown\" and y < size_y and not check_wall_collision(maze.get_maze()[y][x]):\n",
-    "            return (0, 1)\n",
+    "            return 0, 1\n",
     "\n",
     "        elif key == \"ArrowUp\" and y > 0 and not check_wall_collision(maze.get_maze()[y][x]):\n",
-    "            return (0, -1)\n",
+    "            return 0, -1\n",
     "\n",
     "# def move_hero(maze, renderer, x, y):\n",
     "#     renderer.update_hero(maze.get_hero_x(), maze.get_hero_y(), x, y)\n",
@@ -57,16 +58,7 @@
     "    \n",
     "          \n",
     "def main_shit():\n",
-    "    print(\"1\")\n",
-    "    renderer = Renderer(size_x, size_y)\n",
-    "    view = renderer.get_view()\n",
-    "    \n",
-    "    maze = Maze(view, size_x, size_y)\n",
-    "    print(\"3\")\n",
-    "    maze.generate_maze()\n",
-    "    \n",
-    "    renderer.render(maze.get_maze())\n",
-    "    \n",
+    "    maze = Maze()\n",
     "    \n",
     "    maze.generate_hero()\n",
     "    print(\"4\")\n",
